# mesh-wing

./: 3dmap2d.py  pyproject.toml  scmix_voronoi.py  tiling_triangle.py
